chore: save working state after DRL fix & package workaround (2025-08-29 15:02)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,7 @@
 quarkus.optaplanner.solver-config-xml=solverConfig.xml
 quarkus.devservices.enabled=false
+quarkus.kogito.generate.rules=false
+quarkus.kogito.generate.processes=false
+quarkus.kogito.generate.decisions=false
+quarkus.kogito.generate.predictions=false
+quarkus.kogito.generate.usertasks=false
